common/ceph_context: leak some memory fail to show in valgrind

GCC 20 memory optimization broke the memory leak for testing.

Fixes:https://tracker.ceph.com/issues/57165
Signed-off-by: Nitzan Mordechai <nmordec@redhat.com>